# AtlasDL

./: .gitignore  AtlasDL.pro  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  OSMLoader.cpp  OSMLoader.h  Tags.h  analysis.txt  baseOSMObject.cpp  baseOSMObject.h  conductor.cpp  conductor.h  config.ini  dbmanager.cpp  dbmanager.h  direction.h  directionalWay.cpp  directionalWay.h  distance.txt.csv  element.h  feature.cpp  feature.h  geoToLambert.cpp  geoToLambert.h  geodeskReader.cpp  geodeskReader.h  layers.cpp  layers.h  logging.cpp  logging.h  loggingCategories.h  main.cpp  multiPolygon.h  multipoly.cpp  multipoly.h  multipolygon.cpp  node.cpp  node.h  osmElement.h  (+22 more)
documents/: atlas DL details.md
python/: ColourBorderingCountries.py  _old ColourBorderingCountries.py  colourFromBorders.py
schedules/: AdminRelations.txt  AllCountries.txt  Austria.txt  Basic get islands.txt  Default.txt  Europe  admin 2 to 6  islands islets with names.txt  EuropeCities.txt  France excluding bordertype territorial.txt  GB too big.txt  Hampshire.txt  Lakes.txt  South America.txt  UK add admin6.txt  UK admin 2 4 6  islands islets cities with names.txt  UK admin 2 and 6 islands islets and lakes.txt  UK admin 2 and cities.txt  UK only.txt  United States and Canada.txt  Wikidata.txt  WorldCities.txt  WorldCountries.txt  Yorkshire  admin 6  islands islets cities with names.txt  basic all.txt  basic coastline.txt  basic country.txt  basic geodesk.txt  basic get all countries with Geodesk with split France and corrupt Russia.txt  basic get europe to admin 6.txt  basic info.txt  basic process file.txt  basic remove mozambique territorial waters.txt  basic remove terri waters by geodesk.txt  basic simplify.txt  basic.txt  finland.txt  geodesk.txt  islands.txt  natural.txt  oceanMerge.txt  spain.txt  (+1 more)
schedules/subregions/: Basic France level 3.txt
scripts/: CreateBaseTables.spatialite  importBaseLayerShapefiles.spatialite  importSeas.spatialite  importShapefiles.spatialite
scripts/Useful queries/: GetRelationIDAndBBFromCountryName.sql  SelectDistanceAndBearingOfNearestPointToPolygon.txt  SelectDistanceBetweenPointAndPolygon.txt  SelectNameDistanceBearingOfNearestPolygons.txt  SelectPolygonBasedOnPoint.txt  SelectPolygonBasedOnPointNoIndex.txt
scripts/Water/: CreateWaterBorders.sql  InsertWaterBorders.sql
scripts/_old/: CreateAllTables.sql  CreateBorders.sql  CreateMembers.sql  CreateNTWPolygons.sql  CreatePoints.sql  CreatePolygons.sql  CreateRelations.sql  CreateTags.sql  CreateTrimmedPolygons.sql  CreateWays.sql  DeleteData.sql  DeleteGeometries.sql  DeleteNodes.sql  DeleteTags.sql  ExportAdminRelationsToCSV.sql  InsertBorders.sql  InsertPoint.sql  InsertPolygon.sql  InsertRelation.sql  InsertTag.sql  SelectRelationAlreadyDone.sql  SelectRelationIDWithWikidataAndAreaIsNull.sql  UpdateAreas.sql  UpdatePointsWithCentroid.sql  x InsertDownloadedRelations.sql  x UpdateRelationAreaAndSourceFromConstituentPolygons.sql
scripts/_old create/: b CreatePolygons.sql  b CreateWays.sql  d CreateBordersNonMaritime.sql  d CreateLayerWays.sql  d CreateLayers.sql  d CreatePolygonOwners.sql  d CreateVisibleLayers.sql
scripts/batch/: CreateWayPolygonIndexes.sql  disableWayPolygonIndexes.sql
scripts/create/: CreateBorders.sql  CreateContains.sql  CreateGeomCategories.sql  CreateLayerGroups.sql  CreateLayers.sql  CreatePoints.sql  CreatePolygons.sql  _info.txt  a CreateGeomCategories.sql  a CreateLinkTypes.sql  b CreatePoints.sql  c CreateLinestrings.sql  d CreateBorders.sql  d CreateCountries.sql  d CreateLayerPolygons.sql  d CreateLinestringLists.sql  d CreateLinks.sql  d CreateTags.sql  d CreateWayLists.sql  e CreateGeomTriggers.sql
scripts/debug/: queries.txt
scripts/delete/: DeleteLayerPolygonId.sql  DeleteNullPolygons.sql  DeletePolygon.sql  DeletePolygonWayList.sql
scripts/development/: InsertBordersNonMaritime.txt  SelectCountIslandsByCountry.sql  SelectIslandsByCountryId.sql  SelectLinksInfo.sql
scripts/insert/: InsertBaseLayerGroups.sql  InsertBorderingRelations.sql  InsertBorders2.sql  InsertBorders3.sql  InsertBorders4.sql  InsertBordersAllLayers.sql  InsertBordersBetweenDifferentLayers.sql  InsertContainsPoints.sql  InsertContainsPolygons.sql  InsertCountry.sql  InsertIslandPolygonOwners.sql  InsertLayer.sql  InsertLayerPolygon.sql  InsertLinksWithBorderLengths.sql  InsertLinksWithBorders.sql  InsertLinksWithContains.sql  InsertPolygonFromWkt.sql  InsertPolygonOwner.sql  InsertPolygonWayList.sql  InsertPolygonsFromWays.sql  InsertTag.sql  InsertWay.sql
scripts/select/: SelectAllPolygonIds.sql  SelectCoastlineInsidePolygon.sql  SelectCountryIds.sql  SelectCountryPolygonPerimeterWays.sql  (+11 more)
(+33 files in other folders)
